Message-view: Fix excessive spacing for lists followed by paragraphs.
Previously there was an excessive space for ordered lists coming after
a paragraph unlike plain bulleted lists.This was already fixed in webapp
message-list view in #17285.

We fixed this in mobile app by following same spacing as of bulleted
lists coming after paragraph.

Fixes: #4492

--- a/src/webview/static/base.css
+++ b/src/webview/static/base.css
@@ -430,7 +430,7 @@ p {
 .message p + p {
   margin-top: 16px;
 }
-.message ul {
+.message ul, ol {
   padding-left: 20px;
   margin: 4px 0 0 0;
 }
